--- a/templates/lang/android_app_dagger/src_files/res/layout/activity_main.xml
+++ b/templates/lang/android_app_dagger/src_files/res/layout/activity_main.xml
@@ -7,5 +7,5 @@
       android:id="@+id/main_content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      class="{{ .Group }}.MainFragment"/>
+      class="{{ .Group }}.main.MainFragment"/>
 </FrameLayout>
