--- a/templates/lang/android_lib/proj-local.properties
+++ b/templates/lang/android_lib/proj-local.properties
@@ -1,2 +1,2 @@
-ndk.dir=/android/sdk/ndk-bundle
-sdk.dir=/android/sdk
+sdk.dir={{ .AndroidSdkDir }}
+{{ if .AndroidNdkDir }}ndk.dir={{ .AndroidNdkDir }}{{ end }}
