--- a/templates/lang/android_app/src_files/res/layout/fragment_main.xml
+++ b/templates/lang/android_app/src_files/res/layout/fragment_main.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent">
 
   <TextView
+      android:id="@+id/tv_hello_world"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
