--- a/templates/lang/android_app/root-gdmc.json
+++ b/templates/lang/android_app/root-gdmc.json
@@ -7,7 +7,7 @@
   "com.android.support:appcompat-v7": {
       "groupId": "com.android.support",
       "artifactId": "appcompat-v7",
-      "version": "{{ .AndroidSupportLibVersion }}"
+      "version": "{{ .LookupVersion "com.android.support:appcompat-v7" }}"
   },
   "com.android.support:cardview-v7": {
       "groupId": "com.android.support",
