update androidAppDagger to use support fragments

--- a/templates/lang/android_app/root-gdmc.json
+++ b/templates/lang/android_app/root-gdmc.json
@@ -58,5 +58,10 @@
     "groupId": "org.robolectric",
     "artifactId": "robolectric",
     "version": "{{ .LookupVersion "org.robolectric:robolectric" }}"
+  },
+  "org.robolectric:shadows-supportv4": {
+    "groupId": "org.robolectric",
+    "artifactId": "shadows-supportv4",
+    "inheritVersion": "org.robolectric:robolectric"
   }
 }
